fix(FriendOptions): Fixes the friend roues when on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -521,6 +521,10 @@ h1, h2, h3, h4, p {
     .imageBox {
         width: auto
     }
+    .searchFriendOptions {
+        gap: 0;
+        justify-content: space-around;
+    }
 }
 .countFriends {
     color: var(--fourt-primary);
